--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
-name: John Doe
-bio: A Person who travels the world eating noodles
+name: NoThxJ
+bio: 低调求发展，潜心习安全
 
 # twitter summary info
 description: A blog about technology and stuff related
