--- a/_config.yml
+++ b/_config.yml
@@ -38,15 +38,15 @@ twitter: mytwitter
 instagram: myinstagram
 linkedin: mylinkedin
 github: mygithub
-email: myemail@gmail.com
+email: havocykp@gmail.com
 
 authors:
   johndoe:
-    name: John Doe
-    bio: A Man who travels the world eating noodles
+    name: NoThxJ
+    bio: 低调求发展，潜心习安全
     external-image: false
     picture: assets/images/profile.jpg
-    twitter: johndoe
+    twitter: NoThxJ
   jamesfoster:
     name: James Foster
     bio: A Man who develops software with coffee
