--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ related: true
 post-advance-links: [blog]
 
 # show author block at the end of a post ?
-show-author: false
+show-author: true
 
 # do you want some animations?
 animation: true
@@ -102,16 +102,16 @@ defaults:
       # can be overridden in the front matter for a specific post
       hidden: false
 
-#plugins:
-#  - jekyll-seo-tag
-#  - jekyll-gist
-#  - jekyll-feed
-#  - jemoji
-#  - jekyll-admin
-#  - jekyll-paginate-v2
+plugins:
+  - jekyll-seo-tag
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-admin
+  - jekyll-paginate-v2
 
-#jekyll-mentions:
-#  base_url: https://github.com
+jekyll-mentions:
+  base_url: https://github.com
 
 compress_html:
   ignore:
