--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ external-image: false
 picture: assets/images/profile.jpg
 
 # your site color theme, false to light theme
-# 背景颜色
-dark-theme: false
+# 背景颜色：浅色：false   深色：true
+dark-theme: true
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
