--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,10 @@ dark-theme: true
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
+# 分类: Resume
 resume: true
 resume-external: true
-resume-url: https://google.com/?q=my+resume
+resume-url: https://github.com/havocykp
 
 url: https://havocykp.github.io
 # your url: https://USERNAME.github.io
@@ -29,11 +30,13 @@ permalink: /:title/
 # analytics-google: 'UA-MYANALYTICS'
 
 # if you don't want comments in your posts, leave categories empty
+# 文章评论
 disqus:
   shortname: github # enter this from your disqus account
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
+# 社交标签
 facebook: myfacebook
 twitter: mytwitter
 instagram: myinstagram
@@ -41,13 +44,13 @@ linkedin: mylinkedin
 github: mygithub
 email: havocykp@gmail.com
 
-authors:
-  johndoe:
-    name: NoThxJ
-    bio: 低调求发展，潜心习安全
-    external-image: false
-    picture: assets/images/profile.jpg
-    twitter: NoThxJ
+#authors:
+#  johndoe:
+#    name: NoThxJ
+#    bio: 低调求发展，潜心习安全
+#    external-image: false
+#    picture: assets/images/profile.jpg
+#    twitter: NoThxJ
 #  jamesfoster:
 #    name: James Foster
 #   bio: A Man who develops software with coffee
