--- a/_config.yml
+++ b/_config.yml
@@ -31,9 +31,9 @@ permalink: /:title/
 
 # if you don't want comments in your posts, leave categories empty
 # 文章评论
-disqus:
-  shortname: github # enter this from your disqus account
-  categories: [blog, project] # only show disqus for posts that have these categories
+#disqus:
+#  shortname: github # enter this from your disqus account
+#  categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
 # 社交标签
