--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: NoThxJ
 bio: 低调求发展，潜心习安全
 
 # twitter 描述
-description: A blog about technology and stuff related
+# description: A blog about technology and stuff related
 
 # if it's an external image, update below for true
 # better with square images
