--- a/_config.yml
+++ b/_config.yml
@@ -37,10 +37,10 @@ permalink: /:title/
 
 # if you don't have any of social below, comment the line
 # 社交标签
-facebook: facebook
+facebook: 
 twitter: NoThxJ
-instagram: instagram
-linkedin: linkedin
+instagram: 
+linkedin: 
 github: havocykp
 email: havocykp@gmail.com
 
@@ -107,16 +107,16 @@ defaults:
       # can be overridden in the front matter for a specific post
       hidden: false
 
-plugins:
-  - jekyll-seo-tag
-  - jekyll-gist
-  - jekyll-feed
-  - jemoji
-  - jekyll-admin
-  - jekyll-paginate-v2
+# plugins:
+#  - jekyll-seo-tag
+#  - jekyll-gist
+#  - jekyll-feed
+#  - jemoji
+#  - jekyll-admin
+#  - jekyll-paginate-v2
 
-jekyll-mentions:
-  base_url: https://github.com
+# jekyll-mentions:
+#  base_url: https://github.com
 
 compress_html:
   ignore:
