--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ email: havocykp@gmail.com
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
 # normal = 560px / large = 810px
-width: normal
+width: large
 
 # if you do/don't need pagination, toggle 'enabled' between true/false below
 # 页码属性
