--- a/_config.yml
+++ b/_config.yml
@@ -37,10 +37,10 @@ permalink: /:title/
 
 # if you don't have any of social below, comment the line
 # 社交标签
-facebook: xxxx
+facebook: 
 twitter: NoThxJ
-instagram: xxxx
-linkedin: xxxx
+instagram: 
+linkedin: 
 github: havocykp
 email: havocykp@gmail.com
 
